<resources>
    <string name="app_name">Music Player</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="show_more">Show more</string>
    <string name="current_playlist">Current playlist</string>
    <string name="_00_00">00:00</string>
    <string name="music_form">Music form</string>
    <string name="now_playing">Now playing…</string>
    <string name="empty_string"> </string>
    <string name="play_all">Play all</string>
    <string name="div">/</string>
    <string name="playlist">Playlist</string>
    <string name="recent_searches">Recent searches</string>
    <string name="sort_by">Sort by</string>
</resources>