<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity"
    tools:ignore="ContentDescription">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_home" />

    <LinearLayout
        android:id="@+id/lnlBottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_1sdp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lnlHomeNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_1sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_bottom_nav_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/gray_600" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlSearchNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_1sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_bottom_nav_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search" />

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/gray_600" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlFavouriteNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_1sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_bottom_nav_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favourite" />

            <TextView
                android:id="@+id/tvFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite"
                android:textColor="@color/gray_600" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>